// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.utils getVaultHarvestsOnChain returns vaults harvests with apr 1`] = `
Array [
  Object {
    "amount": Object {
      "hex": "0x11bc85620d1c13",
      "type": "BigNumber",
    },
    "block": 13612910,
    "estimatedApr": 0.01,
    "eventType": "Harvest",
    "strategyBalance": "2481941296192304936740",
    "timestamp": 1636878824,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x3ddb4d0d018648",
      "type": "BigNumber",
    },
    "block": 13647172,
    "estimatedApr": 0.06,
    "eventType": "Harvest",
    "strategyBalance": "2366061351720088564649",
    "timestamp": 1637346968,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x53a18268ac9569",
      "type": "BigNumber",
    },
    "block": 13674352,
    "estimatedApr": 0.09,
    "eventType": "Harvest",
    "strategyBalance": "2314042647612435605751",
    "timestamp": 1637717848,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x3531891e4ac3f5",
      "type": "BigNumber",
    },
    "block": 13699647,
    "estimatedApr": 0.01,
    "eventType": "Harvest",
    "strategyBalance": "2300047794001301134071",
    "timestamp": 1638065247,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x8212074a2405cf",
      "type": "BigNumber",
    },
    "block": 13844434,
    "estimatedApr": 0.15,
    "eventType": "Harvest",
    "strategyBalance": "2285851497293213464358",
    "timestamp": 1640034477,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x00",
      "type": "BigNumber",
    },
    "block": 13870247,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": "2257647238481134566616",
    "timestamp": 1640380383,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x30197df9db1863",
      "type": "BigNumber",
    },
    "block": 13896464,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": "2255639612689547422513",
    "timestamp": 1640731025,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x11bc85620d1c13",
      "type": "BigNumber",
    },
    "block": 13612910,
    "estimatedApr": 0.01,
    "eventType": "TreeDistribution",
    "strategyBalance": "2481941296192304936740",
    "timestamp": 1636878824,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x3ddb4d0d018648",
      "type": "BigNumber",
    },
    "block": 13647172,
    "estimatedApr": 0.06,
    "eventType": "TreeDistribution",
    "strategyBalance": "2366061351720088564649",
    "timestamp": 1637346968,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x53a18268ac9569",
      "type": "BigNumber",
    },
    "block": 13674352,
    "estimatedApr": 0.09,
    "eventType": "TreeDistribution",
    "strategyBalance": "2314042647612435605751",
    "timestamp": 1637717848,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x3531891e4ac3f5",
      "type": "BigNumber",
    },
    "block": 13699647,
    "estimatedApr": 0.01,
    "eventType": "TreeDistribution",
    "strategyBalance": "2300047794001301134071",
    "timestamp": 1638065247,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x8212074a2405cf",
      "type": "BigNumber",
    },
    "block": 13844434,
    "estimatedApr": 0.15,
    "eventType": "TreeDistribution",
    "strategyBalance": "2285851497293213464358",
    "timestamp": 1640034477,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x00",
      "type": "BigNumber",
    },
    "block": 13870247,
    "estimatedApr": 0,
    "eventType": "TreeDistribution",
    "strategyBalance": "2257647238481134566616",
    "timestamp": 1640380383,
    "token": "",
  },
  Object {
    "amount": Object {
      "hex": "0x30197df9db1863",
      "type": "BigNumber",
    },
    "block": 13896464,
    "estimatedApr": 0,
    "eventType": "TreeDistribution",
    "strategyBalance": "2255639612689547422513",
    "timestamp": 1640731025,
    "token": "",
  },
]
`;

exports[`vaults.utils getVaultPerformance no rewards or harvests returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 56.764799999999994,
    "boostable": false,
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 74.23705993472916,
    "boostable": false,
    "maxApr": 74.23705993472916,
    "minApr": 74.23705993472916,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non compatible network vault performances returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967",
    "addressValueSourceType": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967_precompound",
    "apr": 56.764799999999994,
    "boostable": false,
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967",
    "addressValueSourceType": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967_compound",
    "apr": 74.23705993472916,
    "boostable": false,
    "maxApr": 74.23705993472916,
    "minApr": 74.23705993472916,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non standard vault performance returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 56.764799999999994,
    "boostable": false,
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 74.23705993472916,
    "boostable": false,
    "maxApr": 74.23705993472916,
    "minApr": 74.23705993472916,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance returns value sources from standard methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 1.9605714285714286,
    "boostable": false,
    "maxApr": 1.9605714285714286,
    "minApr": 1.9605714285714286,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 1.9791654594512487,
    "boostable": false,
    "maxApr": 1.9791654594512487,
    "minApr": 1.9791654594512487,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_bCVXCRV_emission",
    "apr": 0.000004975832417583712,
    "boostable": false,
    "maxApr": 0.000004975832417583712,
    "minApr": 0.000004975832417583712,
    "name": "bCVXCRV Rewards",
    "type": "flat_bCVXCRV_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_derivative_bcvxcrv_compounding",
    "apr": 2.5320518074012263e-7,
    "boostable": false,
    "maxApr": 2.5320518074012263e-7,
    "minApr": 2.5320518074012263e-7,
    "name": "bCVXCRV Compounding",
    "type": "derivative_bcvxcrv_compounding",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_bVECVX_emission",
    "apr": 0.000022426642857150473,
    "boostable": false,
    "maxApr": 0.000022426642857150473,
    "minApr": 0.000022426642857150473,
    "name": "bVECVX Rewards",
    "type": "flat_bVECVX_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_derivative_bvecvx_compounding",
    "apr": 0.000001141224351973436,
    "boostable": false,
    "maxApr": 0.000001141224351973436,
    "minApr": 0.000001141224351973436,
    "name": "bVECVX Compounding",
    "type": "derivative_bvecvx_compounding",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance skips all emitted tokens with no price 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 1.9605714285714286,
    "boostable": false,
    "maxApr": 1.9605714285714286,
    "minApr": 1.9605714285714286,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 1.9791654594512487,
    "boostable": false,
    "maxApr": 1.9791654594512487,
    "minApr": 1.9791654594512487,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;
